logging properties added

--- a/BankApp/src/main/resources/logger_clients.properties
+++ b/BankApp/src/main/resources/logger_clients.properties
@@ -1,7 +1,13 @@
-#Root logger level
-.level = INFO
-java.util.logging.FileHandler.pattern = %h/java%u.log
-java.util.logging.FileHandler.limit = 50000
-java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-java.util.logging.ConsoleHandler.level = INFO
+##Root logger level
+#.level = INFO
+#java.util.logging.FileHandler.pattern = %h/java%u.log
+#java.util.logging.FileHandler.limit = 50000
+#java.util.logging.FileHandler.count = 1
+#java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
+#java.util.logging.ConsoleHandler.level = INFO
+
+handlers=java.util.logging.ConsoleHandler
+.level=INFO
+java.util.logging.ConsoleHandler.level=FINEST
+BankApplication.level=ALL
+my.level=INFO
