--- a/BankApp/src/main/resources/logger.exceptions.properties
+++ b/BankApp/src/main/resources/logger.exceptions.properties
@@ -1,7 +1,13 @@
-#Root logger level
-.level = SEVERE
-java.util.logging.FileHandler.pattern = %h/java%u.log
-java.util.logging.FileHandler.limit = 50000
-java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-java.util.logging.ConsoleHandler.level = SEVERE
+##Root logger level
+#.level = SEVERE
+#java.util.logging.FileHandler.pattern = %h/java%u.log
+#java.util.logging.FileHandler.limit = 50000
+#java.util.logging.FileHandler.count = 1
+#java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
+#java.util.logging.ConsoleHandler.level = SEVERE
+
+handlers=java.util.logging.ConsoleHandler
+.level=SEVERE
+java.util.logging.ConsoleHandler.level=FINEST
+BankApplication.level=ALL
+my.level=SEVERE
