--- a/BankApp/src/main/resources/logger_all.properties
+++ b/BankApp/src/main/resources/logger_all.properties
@@ -1,7 +1,13 @@
 #Root logger level
-.level = ALL
-java.util.logging.FileHandler.pattern = %h/java%u.log
-java.util.logging.FileHandler.limit = 50000
-java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-java.util.logging.ConsoleHandler.level = ALL
+#.level = ALL
+#java.util.logging.FileHandler.pattern = %h/java%u.log
+#java.util.logging.FileHandler.limit = 50000
+#java.util.logging.FileHandler.count = 1
+#java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
+#java.util.logging.ConsoleHandler.level = ALL
+
+handlers=java.util.logging.ConsoleHandler
+.level=ALL
+java.util.logging.ConsoleHandler.level=FINEST
+BankApplication.level=ALL
+my.level=ALL
