--- a/BankApp/src/main/resources/logger_exceptions.properties
+++ b/BankApp/src/main/resources/logger_exceptions.properties
@@ -1,13 +1,15 @@
-##Root logger level
-#.level = SEVERE
-#java.util.logging.FileHandler.pattern = %h/java%u.log
-#java.util.logging.FileHandler.limit = 50000
-#java.util.logging.FileHandler.count = 1
-#java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-#java.util.logging.ConsoleHandler.level = SEVERE
+config = logTestProject.ConfigLoggers
 
-handlers=java.util.logging.ConsoleHandler
-.level=SEVERE
-java.util.logging.ConsoleHandler.level=FINEST
-BankApplication.level=ALL
-my.level=SEVERE
+#Root logger level
+.level = SEVERE
+handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+
+# --- File handler ---
+java.util.logging.FileHandler.pattern = %h/BankApp%u.log
+java.util.logging.FileHandler.limit = 50000
+java.util.logging.FileHandler.count = 1
+java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
+
+# --- Console handler ---
+java.util.logging.ConsoleHandler.level = SEVERE
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
