--- a/BankApp/src/main/resources/logger_clients.properties
+++ b/BankApp/src/main/resources/logger_clients.properties
@@ -1,13 +1,13 @@
-##Root logger level
-#.level = INFO
-#java.util.logging.FileHandler.pattern = %h/java%u.log
-#java.util.logging.FileHandler.limit = 50000
-#java.util.logging.FileHandler.count = 1
-#java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-#java.util.logging.ConsoleHandler.level = INFO
+#Root logger level
+.level = INFO
+handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
-handlers=java.util.logging.ConsoleHandler
-.level=INFO
-java.util.logging.ConsoleHandler.level=FINEST
-BankApplication.level=ALL
-my.level=INFO
+# --- File handler ---
+java.util.logging.FileHandler.pattern = %h/BankApp%u.log
+java.util.logging.FileHandler.limit = 50000
+java.util.logging.FileHandler.count = 1
+java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
+
+# --- Console handler ---
+java.util.logging.ConsoleHandler.level = INFO
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
