--- a/BankApp/src/main/resources/logger_clients.properties
+++ b/BankApp/src/main/resources/logger_clients.properties
@@ -1,3 +1,5 @@
+config = com.luxoft.cjp_krakow_2015.cjp.bankapp.service.ConfigLoggers
+
 #Root logger level
 .level = INFO
 handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
