--- a/BankApp/src/main/resources/logger_exceptions.properties
+++ b/BankApp/src/main/resources/logger_exceptions.properties
@@ -1,4 +1,4 @@
-config = logTestProject.ConfigLoggers
+config = com.luxoft.cjp_krakow_2015.cjp.bankapp.service.ConfigLoggers
 
 #Root logger level
 .level = SEVERE
