--- a/BankApp/pom.xml
+++ b/BankApp/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 
 	</dependencies>
 	<build>
