--- a/BankApp/WebContent/WEB-INF/web.xml
+++ b/BankApp/WebContent/WEB-INF/web.xml
@@ -10,13 +10,29 @@
 		<servlet-name>WelcomeServlet</servlet-name>
 		<servlet-class>com.luxoft.cjp_krakow_2015.cjp.bankapp.servlets.WelcomeServlet</servlet-class>
 	</servlet>
-
+	
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.luxoft.cjp_krakow_2015.cjp.bankapp.servlets.LoginServlet</servlet-class>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>WelcomeServlet</servlet-name>
 		<url-pattern>/welcome</url-pattern>
 	</servlet-mapping>
 	
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/AtmInterface</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>welcome</welcome-file>
 	</welcome-file-list>
+	
+	<welcome-file-list>
+		<welcome-file>AtmInterface</welcome-file>
+	</welcome-file-list>
+	
+	
 </web-app>
