--- a/BankApp/WebContent/WEB-INF/web.xml
+++ b/BankApp/WebContent/WEB-INF/web.xml
@@ -34,7 +34,6 @@
 		<welcome-file>AtmInterface</welcome-file>
 	</welcome-file-list>
 	
-	
 	<filter>
 		<filter-name>CheckLoggedFilter</filter-name>
 		<filter-class>com.luxoft.cjp_krakow_2015.cjp.bankapp.servlets.CheckLoggedFilter</filter-class>
@@ -53,5 +52,9 @@
 		<filter-name>CheckLoggedFilter</filter-name>
 		<servlet-name>WelcomeServlet</servlet-name>
 	</filter-mapping>
+	
+	<listener>
+		<listener-class>com.luxoft.cjp_krakow_2015.cjp.bankapp.servlets.SessionListener</listener-class>
+	</listener>
 	
 </web-app>
