--- a/BankApp/pom.xml
+++ b/BankApp/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
